# JohnConwayGameLifeCuda

./: CMakeLists.txt  cuda learning log.md
CUDA_SFML/: CMakeLists.txt
CUDA_SFML/include/: Block.hpp  Globals.hpp  Grid.hpp  cuda_kernels.cuh  matrix.hpp  parameterParse.hpp
CUDA_SFML/src/: Block.cpp  Globals.cpp  Grid.cpp  cuda_kernels.cu  cuda_kernels.cuh  main.cpp  parameterParse.cpp
